src/components/all.sass
@import "~bulma/sass/utilities/initial-variables"
@import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap')
// Config vars
// Kaldi logo brand color:  #600473
$kaldi-red: #600473
$kaldi-red-invert: #131313

$primary: $kaldi-red
$primary-invert: $kaldi-red-invert
$body-color: #131313
$black: #fbf579

div .navbar
  background-color: #fbf579

.navbar .navbar-menu
  box-shadow: none !important

.content .taglist
  list-style: none
  margin-bottom: 0
  margin-left: 0
  margin-right: 1.5rem
  margin-top: 1.5rem
  display: flex
  flex-wrap: wrap
  justify-content: left
  align-items: center
  li
    padding: 0 2rem 1rem 0
    margin-bottom: 1.5rem
    margin-top: 0

// Helper Classes
.full-width-image-container
  width: 100vw
  height: 400px
  position: relative
  left: 50%
  right: 50%
  margin: 2em -50vw
  background-size: cover
  background-position: bottom
  display: flex
  justify-content: center
  align-items: center

.full-width-image
  width: 100vw
  height: 400px
  background-size: cover
  background-position: bottom
  display: flex
  justify-content: center
  align-items: center

.btn
  display: inline-block
  padding: 12px 16px 10px
  font-size: 18px
  font-size: 1rem
  line-height: 1.25
  background-color: #fbf579
  border-radius: .25rem
  text-decoration: none
  font-weight: 700
  color: #600473
  text-align: center
  -webkit-box-shadow: inset 0 0 0 2px #333
  box-shadow: inset 0 0 0 2px #600473d3
  -webkit-transition: all .15s ease
  transition: all .15s ease

.margin-top-0
  margin-top: 0 !important

.navbar-item .icon
  color: $primary
a.navbar-item:hover
  background-color: #600473 !important

// Override for use of svg's from https://simpleicons.org/
.icon svg
  width: 1.5rem
  height: 1.5rem
  fill: currentColor
.navbar-brand .navbar-item.logo
  padding: 0 1rem

footer.footer
  padding: 3rem 0rem 0rem
  background-color: transparent

//Menu overrides
$menu-item-color: #600473
$menu-item-hover-color: $black !important
$menu-item-hover-background-color: $black
$menu-item-active-color: $kaldi-red-invert
$menu-item-active-background-color:	$kaldi-red-invert
$menu-list-border-left: 1px solid $kaldi-red-invert
$menu-label-color: #600473

.menu-label
  font-size: 1em !important
  text-align: left
.menu-list
  list-style: none !important
  text-align: left
.social
  padding: 2em
.social a
  padding: .5em .5em .3em .5em
  border-radius: 1em
  background-color: #600473
  margin: .5em
  width: 1em
  height: 1em
  vertical-align: middle
  display: inline

// blog roll
.blog-list-item.is-featured
  background-color: #fbf579
.blog-list-item header
  display: flex
  margin-bottom: 1em
.blog-list-item .featured-thumbnail
  flex-basis: 35%
  margin: 0 1.5em 0 0
.title
  text-decoration: none !important

@import "~bulma"

// responsiveness
+tablet-only
  .blog-list-item .featured-thumbnail
    flex-basis: 50%

+mobile
  .blog-list-item header
    display: block
  .blog-list-item .featured-thumbnail
    text-align: center
    max-width: 70%
    margin: 0 0 1em

